# extsync

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.he.md  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5c44fff4f8cb_initial_schema.py  a1b2c3d4e5f6_add_project_ratings.py  a9f4e2b7c1d3_add_email_notif_optout.py  b8d1f3a6c2e7_add_user_extensions.py  c1d2e3f4a5b6_add_likes_quota.py  c9e2f4b8d1a3_add_extension_feedback.py  d2e3f4a5b6c7_add_forum_baseline.py  e3f4a5b6c7d8_add_likes_quota_state.py  f4a5b6c7d8e9_add_email_notif_optout.py  f4a5b6c7d8e9_add_project_screenshots.py
apps/api/src/extsync_api/: __init__.py  config.py  db.py  deps.py  errors.py  ids.py  logging.py  main.py  rbac.py  redis_client.py  storage.py
apps/api/src/extsync_api/models/: __init__.py  agent_version.py  api_token.py  audit.py  auth.py  base.py  device.py  enums.py  extension_feedback.py  install_link.py  likes_quota.py  notification.py  project.py  rating.py  release.py  team.py  user.py  user_extension.py  webhook.py
apps/api/src/extsync_api/routers/: admin.py  agent.py  analytics.py  api_tokens.py  auth.py  catalog.py  feedback.py  health.py  install_links.py  likes_quota.py  me_extensions.py  notifications.py  oauth_google.py  projects.py  releases.py  teams.py  webhooks.py
apps/api/src/extsync_api/schemas/: agent.py  auth.py  common.py  feedback.py  install_link.py  likes_quota.py  project.py  release.py  user_extensions.py
apps/api/src/extsync_api/scripts/: __init__.py  seed.py
apps/api/src/extsync_api/security/: __init__.py  ssrf.py  (+4 more)
apps/api/src/extsync_signing/: __init__.py  main.py  signer.py
apps/api/tests/: conftest.py  test_auth.py  test_extension_key.py  test_likes_quota.py
apps/worker/: pyproject.toml
apps/worker/src/extsync_worker/: __init__.py  artifact.py  bridge.py  main.py  permissions_diff.py  pipeline.py  webhook_delivery.py
apps/worker/tests/: test_artifact.py  test_binary_allowlist.py  test_validation.py
(+189 files in other folders)
