[project]
name = "extsync-api"
version = "0.1.0"
description = "ExtSync platform API + signing service (FastAPI)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "pyotp>=2.9",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "boto3>=1.34",
    "httpx>=0.27",
    "email-validator>=2.1",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "sentry-sdk>=2.0",
    "extsync-release-schema",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extsync_api", "src/extsync_signing"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101", "B008"]  # assert in tests; FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
