[project]
name = "extsync-worker"
version = "0.1.0"
description = "ExtSync background worker: isolated ZIP validation, static analysis, artifact packing."
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "boto3>=1.34",
    "httpx>=0.27",
    "extsync-release-schema",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extsync_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
